# ReadyNASDuoSparc

./: .gitignore  Readme-git.md  Readme.md  apr-1.6.2_1.6.2-1_sparc.deb  apr-util-1.6.0_1.6.0-1_sparc.deb  autoconf-2.69_1.5.3-1_sparc.deb  automake-1.15.1_1.15.1-1_sparc.deb  binutils-2.40-compiled_2.40-1_sparc.md  bison-3.0.4_3.0.4-1_sparc.deb  bzip2_1.0.8-1_sparc.deb  curl-7.64.1_7.64.1-1_sparc.deb  curl-8.8.0_8.8.0-1_sparc.deb  curl-8.8.0_8.8.0-1_sparc.md  expat-2.2.1_2.2.1-1_sparc.deb  flex-2.6.4_1.5.3-1_sparc.deb  gawk-4.1.4_4.1.4-1_sparc.deb  git-2.21.0_2.21.0-readme.md  gmp-6.1.2_6.1.2-1_sparc.deb  gptfdisk-1.0.8_1.0.8-1_sparc.deb  gptfdisk-1.0.8_1.0.8-1_sparc.md  isl-0.18_0.18-1_sparc.deb  lame-mp3_3.1-1_sparc.deb  libsqlite3_3.35.5-1_sparc.deb  libsqlite3_3.35.5-1_sparc.md  libtasn1-4.12_1.5.3-1_sparc.deb  libtool-2.4.6_2.4.6-1_sparc.deb  lz4-1.9.1_1.9.1-1_sparc.deb  lzo-2.10_2.10-1_sparc.deb  m4-1.4.18_1.4.18-1_sparc.deb  make-4.2.1_1.5.3-1_sparc.deb  mpc-1.0.3_1.0.3-1_sparc.deb  mpfr-3.1.5_3.1.5-1_sparc.deb  nano_2017.03.26-1_sparc.deb  openssh-portable_9.8.1-1_sparc.deb  openssh-portable_9.8.1-1_sparc.md  openssl-1.0.2r_1.0.2r-1_sparc.deb  openvpn-2.4.9_2.4.9-1_sparc.deb  perl-base_5.8.8-7.infrant2_sparc.deb  perl-modules_5.8.8-7.infrant2_all.deb  perl_5.8.8-7.infrant2_sparc.deb  (+5 more)
grep-3.1/: .mailmap  ChangeLog  ChangeLog-2009  Makefile  Makefile.am  Makefile.in  NEWS  README-alpha  THANKS  THANKS.in  TODO  aclocal.m4  backup-092820171042-pre-grep-3.1.tgz  cfg.mk  config.h  config.hin  config.status  configure  configure.ac  description-pak  dist-check.mk  grep-3.1_3.1-1_sparc.deb
grep-3.1/doc/: Makefile  Makefile.am  Makefile.in  grep.1  grep.in.1  grep.info  grep.texi  version.texi
grep-3.1/gnulib-tests/: Makefile  Makefile.in  gnulib.mk  localename.c
grep-3.1/lib/: Makefile  Makefile.am  Makefile.in  colorize-posix.c  colorize-w32.c  colorize.c  colorize.h  configmake.h  ctype.h  dirent.h  fcntl.h  fd-hook.c  fd-hook.h  fnmatch.h  getopt-cdefs.h  getopt.h  gnulib.mk  iconv.h  inttypes.h  langinfo.h  locale.h  lseek.c  stdio.h  stdlib.h  string.h  time.h  unistd.h  wchar.h  wctype.h
grep-3.1/lib/.deps/: argmatch.Po  basename-lgpl.Po  binary-io.Po  bitrotate.Po  c-ctype.Po  c-strcasecmp.Po  c-strncasecmp.Po  chdir-long.Po  cloexec.Po  close-stream.Po  closeout.Po  colorize.Po  creat-safer.Po  cycle-check.Po  dfa.Po  (+60 more)
grep-3.1/m4/: gnulib-comp.m4  pcre.m4
grep-3.1/po/: LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  af.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  grep.pot  he.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  ky.po  lt.po  nb.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  (+10 more)
grep-3.1/src/: Makefile  Makefile.am  Makefile.in  dfasearch.c  die.h  grep  grep.c  grep.h  kwsearch.c  kwset.c  kwset.h  pcresearch.c  search.h  searchutils.c  system.h
grep-3.1/tests/: Makefile  Makefile.am  Makefile.in  backref  backref-alt  backref-multibyte-slow  backref-word  backslash-s-and-repetition-operators  backslash-s-vs-invalid-multitype  big-hole  big-match  bre  bre.awk  c-locale  case-fold-backref  case-fold-titlecase  char-class-multibyte  char-class-multibyte2  context-0  count-newline  dfa-coverage  dfa-heap-overrun  dfa-infloop  empty  empty-line  empty-line-mb  encoding-error  ere  ere.awk  ere.tests  euc-mb  false-match-mb-non-utf8  fedora  fgrep-infloop  fgrep-longest  file  filename-lineno.pl  fmbtest  foad1  get-mb-cur-max.c  (+70 more)
libidn2-2.0.4/: CONTRIBUTING.md  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  backup-092820171130-pre-libidn2-2.0.4.tgz  cfg.mk  config.h  config.h.in  config.status  configure  configure.ac  gtk-doc.make  libidn2-2.0.4_2.0.4-1_sparc.deb  libidn2.pc  libtool
libidn2-2.0.4/doc/: Makefile  Makefile.am  Makefile.gdoc  Makefile.gdoci  Makefile.in  decode.c  gdoc  idn2.md  libidn2.html  libidn2.texi  lookup.c  register.c  stamp-vti  texinfo.css
libidn2-2.0.4/examples/: Makefile  Makefile.am  Makefile.in  decode  decode.c  example-toascii  example-toascii.c  example-tounicode  example-tounicode.c  lookup  lookup.c  register  register.c
libidn2-2.0.4/fuzz/: Makefile  Makefile.am  Makefile.in  libidn2_to_ascii_8z_fuzzer.c  libidn2_to_unicode_8z8z_fuzzer.c  main.c
libidn2-2.0.4/gl/: Makefile  Makefile.am  Makefile.in  basename-lgpl.lo  dirname-lgpl.lo  getprogname.lo  libgnu.la  progname.lo  stdio.h  stdlib.h  string.h  stripslash.lo  strverscmp.c  unistd.h  unistd.lo  version-etc.lo
libidn2-2.0.4/lib/: IdnaMappingTable.txt  Makefile  Makefile.am  Makefile.in  bidi.c  bidi.h  bidi.lo  context.c  context.h  context.lo  data.c  data.h  data.lo  decode.c  decode.lo  error.c  error.lo  free.c  free.lo  gen-tables-from-iana.pl  gentr46map.c  idn2.h.in  idn2.map  idna-tables-6.3.0.txt  idna.c  idna.h  idna.lo  libidn2.la  lookup.c  lookup.lo  puny_decode.c  puny_decode.lo  puny_encode.c  puny_encode.lo  punycode.h  register.c  register.lo  tables.c  tables.h  tables.lo  (+5 more)
libidn2-2.0.4/m4/: gnulib-cache.m4  gnulib-comp.m4  valgrind-tests.m4
libidn2-2.0.4/po/: ChangeLog  Makefile  Makefile.in  libidn2.pot
libidn2-2.0.4/src/: Makefile  Makefile.am  Makefile.in  blurbs.h  idn2  idn2.c  idn2.ggo  idn2_cmd.c  idn2_cmd.h  libidn2_cmd.la  libidn2_cmd_la-idn2_cmd.lo
libidn2-2.0.4/tests/: IdnaTest.inc  Makefile  Makefile.am  Makefile.in  gen-utc-test.pl  suppressions.valgrind  test-lookup.c  test-punycode.c  test-register.c  test-strerror.c  test-tounicode.c
libidn2-2.0.4/unistring/: Makefile  Makefile.am  Makefile.in  alloca.h  alloca.in.h  arg-nonnull.h  array-mergesort.h  c++defs.h  c-ctype.h  c-ctype.lo  c-strcase.h  c-strcasecmp.c  c-strcasecmp.lo  c-strcaseeq.h  c-strncasecmp.c  c-strncasecmp.lo  configmake.h  iconv.c  iconv.h  iconv.in.h  iconv_close.c  iconv_open.c  iconveh.h  libunistring.la  limits.h  limits.in.h  localcharset.c  localcharset.h  localcharset.lo  malloca.c  malloca.h  malloca.lo  ref-add.sed  ref-del.sed  stdbool.in.h  stdint.h  stdint.in.h  striconveh.c  striconveh.h  striconveh.lo  (+18 more)
(+1068 files in other folders)
